--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
     <!-- Fontastic Custom icon font-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/css/fontastic.cs') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fontastic.css') }}">
     <!-- Font Awesome CSS-->
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/font-awesome/css/font-awesome.min.css') }}">
     <!-- Google fonts - Poppins -->
@@ -24,6 +24,8 @@
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   </head>
   <body>
     <div class="page login-page">
@@ -48,27 +50,44 @@
                   <form id="register-form">
                     <div class="form-group">
                       <input id="register-username" type="text" name="username" required class="input-material">
-                      <label for="register-username" class="label-material">User Name</label>
+                      <label for="register-username" class="label-material">Username</label>
+                    </div>
+                    <div class="form-group">
+                      <input id="register-firstName" type="text" name="firstName" required class="input-material">
+                      <label for="register-firstName" class="label-material">First Name</label>
+                    </div>
+                    <div class="form-group">
+                      <input id="register-lastName" type="text" name="lastName" required class="input-material">
+                      <label for="register-lastName" class="label-material">Last Name</label>
                     </div>
                     <div class="form-group">
                       <input id="register-email" type="email" name="email" required class="input-material">
-                      <label for="register-email" class="label-material">Email Address      </label>
+                      <label for="register-email" class="label-material">Email Address</label>
+                    </div>
+                    <div class="form-group">
+                      <input id="register-phone" type="text" name="phone" required class="input-material">
+                      <label for="register-phone" class="label-material">Phone Number</label>
                     </div>
                     <div class="form-group">
                       <input id="register-password" type="password" name="password" required class="input-material">
-                      <label for="register-password" class="label-material">password        </label>
+                      <label for="register-password" class="label-material">Password</label>
                     </div>
-                    <input id="register" type="submit" value="Register" class="btn btn-primary">
+                    <div class="form-group">
+                      <input id="register-balance" type="number" name="balance" required class="input-material">
+                      <label for="register-balance" class="label-material">Initial Balance</label>
+                    </div>
+                    <!-- <input id="register" type="submit" value="Register" class="btn btn-primary"> -->
+                    <button id="register" type="button" class="btn btn-primary">Register</button>
                   </form><small>Already have an account? </small><a href="/login" class="signup">Login</a>
                 </div>
               </div>
+              <div id="output"></div>
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- Javascript files-->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="{{ url_for('static', filename='vendor/popper.js/umd/popper.min.js') }}"> </script>
     <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/jquery.cookie/jquery.cookie.js') }}"> </script>
