register partially working, need some testing

--- a/templates/register.html
+++ b/templates/register.html
@@ -37,9 +37,9 @@
               <div class="info d-flex align-items-center">
                 <div class="content">
                   <div class="logo">
-                    <h1>Dashboard</h1>
+                    <h1>Moneyger</h1>
                   </div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                  <p>Be the boss of your own money.</p>
                 </div>
               </div>
             </div>
@@ -47,6 +47,8 @@
             <div class="col-lg-6 bg-white">
               <div class="form d-flex align-items-center">
                 <div class="content">
+                  <div id="error-message"></div>
+                  <h2>Create new account</h2>
                   <form id="register-form">
                     <div class="form-group">
                       <input id="register-username" type="text" name="username" required class="input-material">
@@ -81,7 +83,6 @@
                   </form><small>Already have an account? </small><a href="/login" class="signup">Login</a>
                 </div>
               </div>
-              <div id="output"></div>
             </div>
           </div>
         </div>
