--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -19,6 +19,8 @@
     <!-- Favicon-->
     <link rel="shortcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   </head>
 <body>
   <!-- WRAPPER -->
@@ -94,7 +96,6 @@
   </div>
   <!-- END WRAPPER -->
   <!-- Javascript -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"> </script>
   <script src="{{ url_for('static', filename='vendor/popper.js/umd/popper.min.js') }}"> </script>
   <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
