--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -37,12 +37,9 @@
         <div id="navbar-menu">
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="assets/img/user.png" class="img-circle" alt="Avatar"> <span>Samuel</span> <i class="icon-submenu lnr lnr-chevron-down"></i></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="assets/img/user.png" class="img-circle"><span id="nav-username-display"></span> <i class="icon-submenu lnr lnr-chevron-down"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="#"><i class="lnr lnr-user"></i> <span>My Profile</span></a></li>
-                <li><a href="#"><i class="lnr lnr-envelope"></i> <span>Message</span></a></li>
-                <li><a href="#"><i class="lnr lnr-cog"></i> <span>Settings</span></a></li>
-                <li><a href="#"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
+                <li><a href="/logout"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
               </ul>
             </li>
           </ul>
@@ -56,23 +53,6 @@
         <nav>
           <ul class="nav">
             <li><a href="index.html" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
-            <li><a href="elements.html" class=""><i class="lnr lnr-code"></i> <span>Elements</span></a></li>
-            <li><a href="charts.html" class=""><i class="lnr lnr-chart-bars"></i> <span>Charts</span></a></li>
-            <li><a href="panels.html" class=""><i class="lnr lnr-cog"></i> <span>Panels</span></a></li>
-            <li><a href="notifications.html" class=""><i class="lnr lnr-alarm"></i> <span>Notifications</span></a></li>
-            <li>
-              <a href="#subPages" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>Pages</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
-              <div id="subPages" class="collapse ">
-                <ul class="nav">
-                  <li><a href="page-profile.html" class="">Profile</a></li>
-                  <li><a href="page-login.html" class="">Login</a></li>
-                  <li><a href="page-lockscreen.html" class="">Lockscreen</a></li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="tables.html" class=""><i class="lnr lnr-dice"></i> <span>Tables</span></a></li>
-            <li><a href="typography.html" class=""><i class="lnr lnr-text-format"></i> <span>Typography</span></a></li>
-            <li><a href="icons.html" class=""><i class="lnr lnr-linearicons"></i> <span>Icons</span></a></li>
           </ul>
         </nav>
       </div>
@@ -90,12 +70,13 @@
     <div class="clearfix"></div>
     <footer>
       <div class="container-fluid">
-        <p class="copyright">&copy; 2017 <a href="https://www.themeineed.com" target="_blank">Theme I Need</a>. All Rights Reserved.</p>
+        <p class="copyright">&copy; 2017 <a href="/">Moneyger</a>. All Rights Reserved.</p>
       </div>
     </footer>
   </div>
   <!-- END WRAPPER -->
   <!-- Javascript -->
+  <script src="{{ url_for('static', filename='js/session-check.js') }}" async=""></script>
   <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"> </script>
   <script src="{{ url_for('static', filename='vendor/popper.js/umd/popper.min.js') }}"> </script>
   <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
