--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -39,7 +39,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="assets/img/user.png" class="img-circle"><span id="nav-username-display"></span> <i class="icon-submenu lnr lnr-chevron-down"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="/logout"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
+                <li><a id="logout-account" href="/logout"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
               </ul>
             </li>
           </ul>
@@ -52,7 +52,7 @@
       <div class="sidebar-scroll">
         <nav>
           <ul class="nav">
-            <li><a href="index.html" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
+            <li><a href="/" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
           </ul>
         </nav>
       </div>
