add categories now working

--- a/templates/categorylist.html
+++ b/templates/categorylist.html
@@ -24,8 +24,9 @@
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 					</button>
+					<div id="error-message"></div>
 				</div>
-				
+					
 					<div class="modal-body">
 						<p>Type</p>
 						<form>
