--- a/templates/transactionhistory.html
+++ b/templates/transactionhistory.html
@@ -15,5 +15,33 @@
 {% endblock %}
 {% block page_header %}Dashboard{% endblock %}
 {% block content %}
-
+<div class="row">
+	<div class="col-md-12">
+		<div class="panel">
+			<div class="panel-heading">
+				<h3 class="panel-title">Transactions History</h3>
+			</div>
+			<div class="panel-body no-padding">
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>Category</th>
+							<th>Record</th>
+							<th>Amount</th>
+							<th>Type</th>
+						</tr>
+					</thead>
+					<tbody id="records-rows-all">
+						
+					</tbody>
+				</table>
+			</div>
+			<div class="panel-footer">
+				<div class="row">
+					<div class="col-md-3"><span class="panel-note"><i class="fa fa-clock-o"></i> All time</span></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock %}
