added date when there is new record

--- a/templates/transactionhistory.html
+++ b/templates/transactionhistory.html
@@ -25,6 +25,7 @@
 				<table class="table table-striped">
 					<thead>
 						<tr>
+							<th>Date</th>
 							<th>Category</th>
 							<th>Record</th>
 							<th>Amount</th>
