--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -105,6 +105,7 @@
 									<table class="table table-striped">
 										<thead>
 											<tr>
+												<th>Date</th>
 												<th>Category</th>
 												<th>Record</th>
 												<th>Amount</th>
