fixed bugs: empty input on category name, all zero input amount on adding transaction

--- a/templates/categorylist.html
+++ b/templates/categorylist.html
@@ -24,7 +24,7 @@
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 					</button>
-					<div id="error-message"></div>
+					<div id="error-message-add-new-category"></div>
 				</div>
 					
 					<div class="modal-body">
