--- a/templates/login.html
+++ b/templates/login.html
@@ -47,7 +47,7 @@
             <div class="col-lg-6 bg-white">
               <div class="form d-flex align-items-center">
                 <div class="content">
-                <div id="error-message"></div>
+                <div id="error-message-login"></div>
                   <form id="login-form">
                     <div class="form-group">
                       <input id="login-username" type="text" name="username" required="" class="input-material">
