--- a/templates/register.html
+++ b/templates/register.html
@@ -74,6 +74,10 @@
                       <input id="register-password" type="password" name="password" required class="input-material">
                       <label for="register-password" class="label-material">Password</label>
                     </div>
+                      <div class="form-group">
+                      <input id="register-confirm-password" type="password" name="confirm_password" required class="input-material">
+                      <label for="register-confirm-password" class="label-material">Confirm Password</label>
+                    </div>
                     <div class="form-group">
                       <input id="register-balance" type="number" name="balance" required class="input-material">
                       <label for="register-balance" class="label-material">Initial Balance</label>
