--- a/templates/transactionhistory.html
+++ b/templates/transactionhistory.html
@@ -45,4 +45,6 @@
 		</div>
 	</div>
 </div>
+<script src="{{ url_for('static', filename='js/get-records.js') }}"></script>
+<script src="{{ url_for('static', filename='js/session-check.js') }}"></script>
 {% endblock %}
