--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -25,12 +25,12 @@
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 					</button>
-					<div id="error-message-add-new-category"></div>
+					<div id="error-message-add-new-category-dash"></div>
 				</div>
 					
 					<div class="modal-body">
 						<p>Type</p>
-						<form>
+						<form id='new-cat-form-dash'>
 							<label class="fancy-radio">
 								<input name="type" value="income" type="radio">
 								<span><i></i>Income</span>
@@ -45,7 +45,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button id="add-new-category" type="button" class="btn btn-primary">Save changes</button>
+						<button id="add-new-category-dash" type="button" class="btn btn-primary">Save changes</button>
 					</div>
 				
 			</div>
@@ -91,7 +91,7 @@
 	        <div id="error-message-add-new-trans"></div>
 	      </div>
 			<div class="modal-body">
-				<form>
+				<form id='new-trans-form'>
 					<p>Category</p>
 					<select id="category-picker" class="form-control" name="category_id">
 					</select>
@@ -252,4 +252,11 @@
 				</div>
 	</div>
 </div>
+
+<script src="{{ url_for('static', filename='js/session-check.js') }}"></script>
+<script src="{{ url_for('static', filename='js/add-new-cat.js') }}"></script>
+<script src="{{ url_for('static', filename='js/add-new-trans.js') }}"></script>
+<script src="{{ url_for('static', filename='js/get-recent-rec.js') }}"></script>
+<script src="{{ url_for('static', filename='js/get-balance.js') }}"></script>
+
 {% endblock %}
