--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/app.js') }}"></script> -->
   </head>
 <body>
   <!-- WRAPPER -->
@@ -70,14 +70,39 @@
   </div>
   <!-- END WRAPPER -->
   <!-- Javascript -->
-  <script src="{{ url_for('static', filename='js/session-check.js') }}"></script>
+  <!-- <script src="{{ url_for('static', filename='js/session-check.js') }}"></script> -->
   <!-- <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"> </script> -->
+  <script type="text/javascript">
+    $(document).ready(function(){
+      var url = "http://localhost:5000";
+      $( "#logout-account" ).click(function() {
+          var settings = {
+                "async": true,
+                "crossDomain": true,
+                "url": url+"/users/logout",
+                "method": "POST",
+                "headers": {
+                  "accept": "application/json",
+                  "authorization": sessionStorage.getItem('token_key')
+                },
+                success: function(){
+                  window.location.href = '/login';
+                },
+                error: function(){
+                  sessionStorage.clear();
+                  window.location.href = '/login';
+                }
+              }
+                $.ajax(settings);
+        });
+    });
+  </script>
   <script src="{{ url_for('static', filename='vendor/popper.js/umd/popper.min.js') }}"> </script>
   <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/jquery.cookie/jquery.cookie.js') }}"> </script>
   <script src="{{ url_for('static', filename='vendor/jquery-validation/jquery.validate.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendor/jquery-slimscroll/jquery.slimscroll.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='scripts/klorofil-common.js') }}"></script>
+  <!-- <script src="{{ url_for('static', filename='vendor/jquery-slimscroll/jquery.slimscroll.min.js') }}"></script> -->
+  <!-- <script src="{{ url_for('static', filename='scripts/klorofil-common.js') }}"></script> -->
 </body>
 
 </html>
