--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/app.js') }}"></script> -->
   </head>
   <body>
     <div class="page login-page">
@@ -78,5 +78,6 @@
     <script src="{{ url_for('static', filename='login-register/vendor/jquery.cookie/jquery.cookie.js') }}"> </script>
     <script src="{{ url_for('static', filename='login-register/vendor/jquery-validation/jquery.validate.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/front.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
   </body>
 </html>
