--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -143,7 +143,7 @@
 											<tr>
 												<th>Date</th>
 												<th>Category</th>
-												<th>Record</th>
+												<th>Description</th>
 												<th>Amount</th>
 												<th>Type</th>
 											</tr>
@@ -252,8 +252,7 @@
 				</div>
 	</div>
 </div>
-
-<script src="{{ url_for('static', filename='js/session-check.js') }}"></script>
+<script src="{{ url_for('static', filename='js/session-check.js') }}" async=""></script>
 <script src="{{ url_for('static', filename='js/add-new-cat.js') }}"></script>
 <script src="{{ url_for('static', filename='js/add-new-trans.js') }}"></script>
 <script src="{{ url_for('static', filename='js/get-recent-rec.js') }}"></script>
